--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "phoebe",
   "author": "PHOEBE development team",
-  "contributors": "Kyle Conroy",
+  "contributors": [
+    "Kyle Conroy"
+  ],
   "description": "Eclipsing Binary Modeling Software",
   "version": "1.0.1",
   "license": "GPL v3",
@@ -11,39 +13,37 @@
   },
   "private": true,
   "devDependencies": {
-    "electron": "10.1.3",
-    "electron-installer-debian": "^3.0.0",
-    "electron-installer-dmg": "^2.0.0",
-    "electron-installer-redhat": "^0.5.0",
+    "electron": "^32.0.2",
+    "electron-installer-debian": "^3.2.0",
+    "electron-installer-dmg": "^5.0.1",
+    "electron-installer-redhat": "^3.4.0",
     "electron-installer-windows": "^3.0.0",
-    "electron-packager": "13.0.0",
-    "foreman": "3.0.1",
-    "react-scripts": "0.8.5",
-    "replace-in-file": "^6.1.0"
+    "electron-packager": "^17.1.2",
+    "react-scripts": "^5.0.1",
+    "replace-in-file": "^6.1.0",
+    "foreman": "3.0.1"
   },
   "dependencies": {
-    "abortcontroller-polyfill": "1.2.1",
-    "array-move": "2.1.0",
-    "babel-polyfill": "6.26.0",
-    "electron-fetch": "1.3.0",
-    "electron-prompt": "1.5.1",
-    "is-electron": "2.2.0",
-    "lodash.clonedeep": "4.5.0",
-    "papaparse": "5.3.0",
-    "react": "16.6.3",
-    "react-dom": "16.6.3",
-    "react-flip-move": "3.0.3",
-    "react-panelgroup": "1.0.7",
-    "react-query-params": "1.0.9",
-    "react-router-dom": "4.3.1",
-    "react-select": "3.0.4",
-    "react-sortable-hoc": "1.9.1",
-    "react-toastify": "5.3.1",
-    "react-toggle-button": "2.2.0",
-    "semver-compare": "1.0.1",
-    "socket.io-client": "2.2.0",
-    "whatwg-fetch": "3.0.0",
-    "yargs": "12.0.0"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.0",
+    "react-router-dom": "^6.26.1",
+    "react-select": "^5.8.0",
+    "react-toastify": "^9.0.0",
+    "react-flip-move": "^3.0.5",
+    "react-sortable-hoc": "^2.0.0",
+    "@asphalt-react/toggle-button": "^2.0.0-rc.0",
+    "electron-fetch": "^1.9.1",
+    "electron-prompt": "^1.7.0",
+    "socket.io-client": "^4.7.5",
+    "is-electron": "^2.2.2",
+    "history": "^5.3.0",
+    "abortcontroller-polyfill": "^1.7.5",
+    "papaparse": "^5.4.1",
+    "semver-compare": "^1.0.0",
+    "yargs": "^17.7.2",
+    "whatwg-fetch": "^3.6.20",
+    "rsuite": "^5.70.1"
   },
   "homepage": "http://ui.phoebe-project.org",
   "main": "build/electron-starter.js",
@@ -63,5 +63,17 @@
     "package:installer:dmg64": "electron-installer-dmg ./dist/phoebe-darwin-x64/phoebe.app FooBar --out dist/installers/ --icon=public/favicon.png --overwrite",
     "package:installer:exe64": "electron-installer-windows --src dist/phoebe-win32-x64/ --dest dist/installers/",
     "package:installer:exe32": "electron-installer-windows --src dist/phoebe-win32-ia32/ --dest dist/installers/"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
