--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.0",
     "react-toastify": "^9.0.0",
     "react-flip-move": "^3.0.5",
-    "react-sortable-hoc": "^2.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@dnd-kit/sortable": "^8.0.0",
     "@asphalt-react/toggle-button": "^2.0.0-rc.0",
     "electron-fetch": "^1.9.1",
     "electron-prompt": "^1.7.0",
