--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "phoebe",
   "author": "PHOEBE development team",
   "contributors": [
-    "Kyle Conroy"
+    "Kyle Conroy", "Matthias Fabry"
   ],
   "description": "Eclipsing Binary Modeling Software",
   "version": "1.0.1",
@@ -54,7 +54,7 @@
     "test": "react-scripts test --env=jsdom",
     "electron": "electron .",
     "dev": "npm run build:electron && nf start -p 3000",
-    "build:electron": "npm run build && cp build/index.html build/index_static.html && replace-in-file '/href=\"//g' 'href=\"./' build/index.html --isRegex && replace-in-file '/src=\"//g' 'src=\"./' build/index.html --isRegex && cp ./src/electron*.js ./build/ && cp -R ./src/icons ./build/",
+    "build:electron": "npm run build && cp build/index.html build/index_static.html && replace-in-file '/href=\"//g' 'href=\"./' build/index.html --isRegex && replace-in-file '/src=\"//g' 'src=\"./' build/index.html --isRegex && cp ./src/electron*.js ./build/ && cp ./src/preload.js ./build/ && cp -R ./src/icons ./build/",
     "package:all": "npm run build:electron && electron-packager . --all --out=dist --overwrite --ignore=dist --ignore=src --ignore=public && cd dist && tar -czf phoebe-linux-x64.tar.gz phoebe-linux-x64 && tar -czf phoebe-darwin-x64.tar.gz phoebe-darwin-x64 && zip -r phoebe-win32-x64.zip phoebe-win32-x64",
     "package": "npm run build:electron && electron-packager . --out=dist --overwrite --ignore=dist --ignore=src --ignore=public",
     "package:installer:all": "npm run package:installer:deb64 && npm run package:installer:rpm64 && npm run package:installer:dmg64 && npm run package:installer:exe64 && npm run package:installer:exe32",
