--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "Kyle Conroy", "Matthias Fabry"
   ],
   "description": "Eclipsing Binary Modeling Software",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "license": "GPL v3",
   "repository": {
     "type": "git",
@@ -46,7 +46,7 @@
     "whatwg-fetch": "^3.6.20",
     "rsuite": "^5.70.1"
   },
-  "homepage": "http://ui.phoebe-project.org",
+  "homepage": "https://ui.phoebe-project.org",
   "main": "build/electron-starter.js",
   "scripts": {
     "start": "react-scripts start",
