revert actions to http; use Navigate

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "phoebe",
   "author": "PHOEBE development team",
   "contributors": [
-    "Kyle Conroy", "Matthias Fabry"
+    "Kyle Conroy",
+    "Matthias Fabry"
   ],
   "description": "Eclipsing Binary Modeling Software",
   "version": "1.1.0",
@@ -19,32 +20,33 @@
     "electron-installer-redhat": "^3.4.0",
     "electron-installer-windows": "^3.0.0",
     "electron-packager": "^17.1.2",
+    "foreman": "^3.0.1",
     "react-scripts": "^5.0.1",
-    "replace-in-file": "^6.1.0",
-    "foreman": "3.0.1"
+    "replace-in-file": "^6.1.0"
   },
   "dependencies": {
+    "@asphalt-react/toggle-button": "^2.0.0-rc.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "abortcontroller-polyfill": "^1.7.5",
+    "electron-fetch": "^1.9.1",
+    "electron-prompt": "^1.7.0",
+    "history": "^5.3.0",
+    "is-electron": "^2.2.2",
+    "lodash": "^4.17.21",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flip-move": "^3.0.5",
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.0",
     "react-toastify": "^9.0.0",
-    "react-flip-move": "^3.0.5",
-    "@dnd-kit/utilities": "^3.2.2",
-    "@dnd-kit/sortable": "^8.0.0",
-    "@asphalt-react/toggle-button": "^2.0.0-rc.0",
-    "electron-fetch": "^1.9.1",
-    "electron-prompt": "^1.7.0",
-    "socket.io-client": "^4.7.5",
-    "is-electron": "^2.2.2",
-    "history": "^5.3.0",
-    "abortcontroller-polyfill": "^1.7.5",
-    "papaparse": "^5.4.1",
+    "rsuite": "^5.70.1",
     "semver-compare": "^1.0.0",
-    "yargs": "^17.7.2",
+    "socket.io-client": "^4.7.5",
     "whatwg-fetch": "^3.6.20",
-    "rsuite": "^5.70.1"
+    "yargs": "^17.7.2"
   },
   "homepage": "https://ui.phoebe-project.org",
   "main": "build/electron-starter.js",
